# CONDA

./: pyproject.toml
app/: benchmark.py  embeddings.py  search.py  streamlit_app.py
artifacts/index/: conda_custom.faiss  conda_openai.faiss  id_map.parquet
conda_embed_showdown.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tools/: prepare_index.py  start.py
